# skm

./: .editorconfig  .gitignore  LICENSE.md  README.MD  config.json  package.json  settings.json  skm  skm-install.sh
cargo/: build.rs  cargo.sh  help.sh
cargo/src/: Cargo.toml  lib.rs
clang++/: clang++.sh  help.sh
clang++/include/: adapter_type_mapper.h  basics.h  circle_drawing.h  circle_geometry.h  clipping.h  drawing_options.h  ellipse_drawing.h  graphics.h  input.h  json.h  matrix_2d.h  mouse_input.h  networking.h  point_geometry.h  random.h  raspi_adc.h  raspi_gpio.h  rectangle_drawing.h  splashkit.h  text.h  timers.h  types.h  vector_2d.h  web.h
clang++/src/: adapter_type_mapper.cpp  splashkit.cpp
clib/: CMakeLists.txt  easylogging++.h
deploy/: deploy.sh  help.sh
deploy/native/: lang_details.sh  skm_deploy_native.sh  skm_deploy_native_mac.sh
dotnet/: SplashKit.cs  dotnet.sh  help.sh
dotnet/files/: Program.cs
fix/: fix.sh  help.sh
fix/c++/: lang_details.sh  skm_fix_c++.sh
fix/cargo/: skm_fix_cargo.sh
fix/dotnet/: lang_details.sh  skm_fix_dotnet.sh
fix/python3/: lang_details.sh  skm_fix_python3.sh
fix/rust/: skm_fix_rust.sh
fpc/: SplashKit.pas  fpc.sh  help.sh
g++/: g++.sh  help.sh
g++/include/: adapter_type_mapper.h  animations.h  audio.h  basics.h  bundles.h  camera.h  collisions.h  color.h  geometry.h  images.h  interface.h  keyboard_input.h  line_drawing.h  line_geometry.h  logging.h  music.h  networking.h  physics.h  point_drawing.h  quad_geometry.h  raspi_adc.h  rectangle_geometry.h  resources.h  sound.h  splashkit.h  sprites.h  terminal.h  text_input.h  triangle_drawing.h  triangle_geometry.h  types.h  utils.h  web_server.h  window_manager.h
g++/src/: adapter_type_mapper.cpp  splashkit.cpp
global/: global.sh  help.sh
global/install/: command_details.sh  skm_global_install.sh  splashkit.h  test.cpp
help/: help.sh
install-scripts/: dev-install.sh  linux-install.sh  mac-install.sh  skm-install.sh  windows-install.sh
install-scripts/aio/: README.md  aio-install.sh  uninstall.sh
install-scripts/linux/: skm-install-linux.sh
install-scripts/mac/: skm-install-mac.sh
linux/: help.sh  linux.sh
linux/install/: install.sh  install_deps.sh
mac-build/: mac-install.sh
macos/: help.sh  macos.sh
macos/install/: install.sh  install_deps.sh
new/: help.sh  new.sh
new/c++/: lang_details.sh  skm_new_c++.sh
new/c++/files/: program.cpp
new/cargo/: lang_details.sh  skm_new_cargo.sh
new/cargo/files/: Cargo.toml
new/cargo/files/src/: main.rs
new/pascal/: lang_details.sh  skm_new_pascal.sh
new/pascal/files/: Program.pas
new/python3/: lang_details.sh  skm_new_python3.sh
new/python3/files/: .env  program.py
new/rust/: lang_details.sh  skm_new_rust.sh
python3/: help.sh  python3.sh  splashkit.py
resources/: help.sh  resources.sh
resources/Resources/animations/: readme.txt
resources/Resources/bundles/: readme.txt
resources/Resources/databases/: readme.txt
resources/Resources/fonts/: readme.txt
resources/Resources/images/: readme.txt
resources/Resources/json/: readme.txt
resources/Resources/server/: readme.txt
resources/Resources/sounds/: readme.txt
revert/: help.sh  revert.sh
rust/src/: lib.rs
source/: CMakeLists.txt  audio_driver.cpp  basics.cpp  circle_drawing.cpp  clipping.cpp  crc32.cpp  digest.cpp  gpio_driver.cpp  interface.cpp  interface_driver.cpp  keccak.cpp  keyboard_input.cpp  lib_type_mapper.cpp  logging_driver.cpp  md5.cpp  music.cpp  networking.cpp  point_drawing.cpp  point_geometry.cpp  raspi_adc.cpp  raspi_gpio.cpp  raspi_motor_driver.cpp  raspi_servo_driver.cpp  resources.cpp  sha1.cpp  sha256.cpp  sha3.cpp  sk_clib.cpp  sprites.cpp  terminal.cpp  text_input.cpp  utility_functions.cpp  web_client.cpp
source/include/: animations.h  audio_driver.h  backend_types.h  basics.h  circle_drawing.h  circle_geometry.h  clipping.h  drawing_options.h  gpio_driver.h  graphics.h  input_driver.h  interface.h  interface_driver.h  json.h  lib_type_mapper.h  music.h  networking.h  point_drawing.h  point_geometry.h  raspi_adc.h  raspi_gpio.h  raspi_motor_driver.h  raspi_servo_driver.h  rectangle_drawing.h  sk_clib.h  sprites.h  text_input.h  timers.h  triangle_geometry.h  types.h  utility_functions.h
src/: index.js
src/cli/: index.js
src/commands/: build.js  create.js  dev.js  docs.js  help.js  index.js  init.js  install.js  run.js  update.js
src/commands/compilers/: index.js
src/config/: index.js
src/gui/: index.js
src/utilities/: index.js
src/utils/: index.js
tools/: set_sk_env_vars.sh
uninstall/: help.sh  uninstall.sh
update/: help.sh  update.sh
vscode/: help.sh  vscode.sh
vscode/extensions/: skm_vscode_extensions.sh
vscode/settings/: settings.json  skm_vscode_settings.sh
windows/: help.sh  windows.sh
windows-build/: windows-install.sh
windows-build/skm-win32-x64/resources/: electron.asar
windows-build/skm-win32-x64/resources/app/: .gitignore  package.json  skm-install.sh
windows-build/skm-win32-x64/resources/app/src/commands/: init.js
windows-build/skm-win32-x64/resources/app/src/config/: index.js
windows-build/skm-win32-x64/resources/app/src/gui/: index.js
windows-build/skm-win32-x64/resources/app/windows-build/: windows-install.sh
windows/install/: build.sh  install.sh  install_deps.sh
